@@ -3,13 +3,14 @@ package log.charter.services.data.validation;
 import static log.charter.gui.components.utils.ComponentUtils.askYesNoCancel;
 import static log.charter.util.CollectionUtils.filter;
 
+import java.util.List;
+
 import log.charter.data.config.Localization.Label;
 import log.charter.data.song.Arrangement;
 import log.charter.data.song.EventPoint;
 import log.charter.gui.CharterFrame;
 import log.charter.services.data.ChartTimeHandler;
 import log.charter.services.editModes.ModeManager;
-import log.charter.util.collections.ArrayList2;
 
 public class PhrasesValidator {
 	private CharterFrame charterFrame;
@@ -21,10 +22,9 @@ public class PhrasesValidator {
 		chartTimeHandler.nextTime(time);
 	}
 
-	private boolean validateCountPhrases(final ArrayList2<EventPoint> phrases, final int arrangementId,
+	private boolean validateCountPhrases(final List<EventPoint> phrases, final int arrangementId,
 			final String arrangementName) {
-		final ArrayList2<EventPoint> countPhrases = filter(phrases, phrase -> phrase.phrase.equals("COUNT"),
-				ArrayList2::new);
+		final List<EventPoint> countPhrases = filter(phrases, phrase -> phrase.phrase.equals("COUNT"));
 
 		if (countPhrases.size() <= 1) {
 			return true;
@@ -33,7 +33,7 @@ public class PhrasesValidator {
 		switch (askYesNoCancel(charterFrame, Label.WARNING, Label.MULTIPLE_COUNT_PHRASES_MOVE_TO_LAST_QUESTION,
 				arrangementName)) {
 			case YES:
-				moveToTimeOnArrangement(arrangementId, countPhrases.getLast().position());
+				moveToTimeOnArrangement(arrangementId, countPhrases.get(countPhrases.size() - 1).position());
 				return false;
 			case NO:
 				return true;
@@ -44,10 +44,9 @@ public class PhrasesValidator {
 		}
 	}
 
-	private boolean validateEndPhrases(final ArrayList2<EventPoint> phrases, final int arrangementId,
+	private boolean validateEndPhrases(final List<EventPoint> phrases, final int arrangementId,
 			final String arrangementName) {
-		final ArrayList2<EventPoint> endPhrases = filter(phrases, phrase -> phrase.phrase.equals("END"),
-				ArrayList2::new);
+		final List<EventPoint> endPhrases = filter(phrases, phrase -> phrase.phrase.equals("END"));
 
 		if (endPhrases.size() <= 1) {
 			return true;
@@ -67,7 +66,7 @@ public class PhrasesValidator {
 		}
 	}
 
-	private boolean validatePhrasesAmount(final ArrayList2<EventPoint> phrases, final int arrangementId,
+	private boolean validatePhrasesAmount(final List<EventPoint> phrases, final int arrangementId,
 			final String arrangementName) {
 		if (!phrases.isEmpty()) {
 			return true;
@@ -88,7 +87,7 @@ public class PhrasesValidator {
 	}
 
 	public boolean validatePhrases(final int arrangementId, final Arrangement arrangement) {
-		final ArrayList2<EventPoint> phrases = filter(arrangement.eventPoints, EventPoint::hasPhrase, ArrayList2::new);
+		final List<EventPoint> phrases = filter(arrangement.eventPoints, EventPoint::hasPhrase);
 		final String arrangementName = arrangement.getTypeNameLabel(arrangementId);
 
 		if (!validateCountPhrases(phrases, arrangementId, arrangementName)) {
